# advanced-programing

./: .gitignore  README.md
task-12/calculator/: calculator.cabal  package.yaml
task-12/calculator/app/: Main.hs
task-12/recursion/: CHANGELOG.md  recursion.cabal
task-12/recursion/src/: Lib.hs
task00/: .gitignore  README.md  height_plot.gp  task_00.md  task_mine00.md  test.csv
task01/: .gitignore  README.md  REFLECTION.md  accountant.awk  accountant.cpp  task_01.md
task06/: README.md  lab06.cabal  package.yaml
task06/src/: Lib.hs
task07/snake/: LICENSE  ant.cabal
task07/snake/app/: Main.hs
task07/snake/src/: Input.hs  Logic.hs
task10/: README.md  SPEC.md
task10/punto/: CHANGELOG.md
task10/punto/src/: Main.hs
task10/punto/test/: Spec.hs
task11/: README.md
task11/tic-tac-toe-good/: .gitignore  .gitlab-ci.yml  .golangci.yml  Makefile  board.go  board_test.go  game.go  game_test.go  go.mod  player.go  player_test.go  render.go  render_test.go
task9/: README.md
task9/snake1/: package.yaml
task9/snake1/src/: Game.hs  Render.hs  Types.hs
task9/snake2/: .gitignore  snake2.cabal
task9/snake2/src/: Render.hs
task_02/: INSTRUCTIONS.md  README.md  SUBMISSION.md
task_02/a-helloworld/: README.md
task_02/a-helloworld/helloword/: helloword.cabal
task_02/b-helloname/: README.md
task_02/b-helloname/delB/: CHANGELOG.md  README.md  delB.cabal
task_02/c-age/: ANSWERS.md  README.md
task_02/c-age/age-project/: package.yaml
task_02/d-mhead/: README.md
task_02/d-mhead/mhead-project/: package.yaml
task_03/: SUBMISSION.md
task_03/a-tuples/: package.yaml
task_03/b-lists/: package.yaml
task_03/b-lists/src/: Lists.lhs
task_03/d-recursion-fold/: .gitignore  package.yaml
task_03/task-03/: README.md
task_04/: README.md  SUBMISSION.md
task_04/task04/: README.md
task_05/: .SUBMISSION.md.swp
task_05/b-fileio/: .gitignore  package.yaml
task_05/task_05/: README.md  SUBMISSION.md
task_07/: README.md
task_07/snake/: Types.hs
task_09/snake1/: CHANGELOG.md  LICENSE  snake1.cabal
task_09/snake2/: CHANGELOG.md  package.yaml  stack.yaml
task_10/: AI.md  GEMINI.md
task_10/punto/: punto.cabal
task_10/punto/src/Game/: Board.hs  Rules.hs  Win.hs
task_10/punto/src/Punto/: Board.hs  Core.hs  Logic.hs  UI.hs
task_11/tic-tac-toe-bad/: game.go  go.mod  main.go
task_11/tic-tac-toe-good/: .gitlab-ci.yml  README.md  board.go  board_test.go  errors.go  game.go  game_test.go  go.mod  player.go  player_test.go  render.go  render_test.go
task_12/: README.md
task_12/recursion/: package.yaml
(+769 files in other folders)
