cabal-version:       2.2

name:                punto
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/punto#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2026 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Game.Types
                     , Game.Board
                     , Game.Rules
                     , Game.Win
                     , Punto.Core
                     , Punto.Board
                     , Punto.Player
                     , Punto.AI
                     , Punto.Logic
                     , Punto.UI
  build-depends:       base >= 4.7 && < 5
                     , brick >= 2.0
                     , vty >= 6.0
                     , containers
                     , random
                     , random-shuffle
                     , microlens
                     , microlens-th
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall

executable punto
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Game.Types
                     , Game.Board
                     , Game.Rules
                     , Game.Win
                     , Punto.Core
                     , Punto.Board
                     , Punto.Player
                     , Punto.AI
                     , Punto.Logic
                     , Punto.UI
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , punto
                     , brick
                     , vty
                     , containers
                     , random
                     , random-shuffle
                     , text
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

test-suite punto-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , punto
                     , doctest
                     , directory
                     , microlens
                     , microlens-th
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
